Added banner image, and continuing to build front page

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,7 +1,8 @@
 // Color Variables //
 
-$concord-orange: #FA9D08;
+$concord-orange: #FA9914;
 $half-black: rgba(0, 0, 0, 0.5);
+$opaque: rgba(0, 0, 0, 0);
 
 // Font Variables //
 
@@ -10,7 +11,5 @@ $half-black: rgba(0, 0, 0, 0.5);
   padding: 0;
   margin: 0;
 }
-
-
 
 
