Added more of the Home page

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -3,6 +3,7 @@
 $concord-orange: #FA9914;
 $half-black: rgba(0, 0, 0, 0.5);
 $opaque: rgba(0, 0, 0, 0);
+$light-gray: #F6F6F6;
 
 // Font Variables //
 
