Started creating universal variables to use throughout the app'

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -13,4 +13,79 @@ $light-gray: #F6F6F6;
   margin: 0;
 }
 
+// Common Elements //
+
+.wrapper {
+  width: 100vw;
+  max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner {
+  background-size: cover;
+  background-position: center;
+  height: 50vh;
+  width: 100%;
+  max-width: 1440px;
+}
+
+.banner-bar {
+  height: 80px;
+  width: 100vw;
+  max-width: 1440px;
+  background-color: $concord-orange;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.banner-bar-link {
+  margin: 0 25px;
+}
+
+.banner-bar-link-mobile {
+  display: none
+}
+
+.subtitle {
+  color: $concord-orange;
+  font-size: 15px;
+  margin: 10px 0;
+}
+
+.title {
+  color: $concord-orange;
+  font-size: 15px;
+  margin: 15px 0;
+}
+
+.content-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  box-shadow: 5px 5px 50px #EEEEEE;
+  margin: 15px 0;
+}
+
+/* ---------------------- Small Screens ---------------------*/
+
+@media screen and (max-width: 750px) {
+  .banner-bar-link-mobile {
+    display: block;
+    font-size: 25px;
+    color: white;
+  }
+
+  .banner-bar-link {
+    display: none;
+  }
+}
 
