Made the navbar background white, stationary on top, made the application form dynamic and created success and error modals

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -73,6 +73,7 @@ $light-gray: #F6F6F6;
   background: white;
   box-shadow: 5px 5px 50px #EEEEEE;
   margin: 15px 0;
+  position: relative
 }
 
 /* ---------------------- Small Screens ---------------------*/
