--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -71,6 +71,7 @@ $light-gray: #F6F6F6;
   background: white;
   box-shadow: 5px 5px 50px #EEEEEE;
   margin: 15px 0;
+  padding: 25px 0;
   position: relative
 }
 
