--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -9,6 +9,7 @@ $light-gray: #F6F6F6;
 * {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 // Common Elements //
@@ -44,6 +45,7 @@ $light-gray: #F6F6F6;
 
 .banner-bar-link {
   margin: 0 25px;
+  cursor: pointer;
 }
 
 .banner-bar-link-mobile {
